adding heading, heading gradient, and span

--- a/index.html
+++ b/index.html
@@ -16,9 +16,19 @@
 
     <body>
         <header class="header">
-            <h1>
-                Natours CSS Review
-            </h1>
+            <div class="logo-box">
+                <img src="media/logo-white.png" alt="Logo" class="logo">
+            </div>
+            <div class="text-box">
+                <h1 class='heading-primary'>
+                    <span class="heading-primary-main gradient-text">
+                        Natours
+                    </span>
+                    <span class="heading-primary-sub">
+                        CSS Review
+                    </span>
+                </h1>
+            </div>
         </header>
     </body>
 
