--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 	<body>
 		<header class="header">
 			<div class="header__logo-box">
-				<img src="media/logo-white.png" alt="Logo" class="logo" />
+				<img src="media/logo-white.png" alt="Logo" class="header__logo" />
 			</div>
 			<div class="header__text-box">
 				<h1 class="heading-primary">
-					<span class="heading-primary--main gradient-text"> Natours </span>
+					<span class="heading-primary--main heading-primary--gradient-text"> Natours </span>
 					<span class="heading-primary--sub"> CSS Review </span>
 				</h1>
                 <a href="#" class='btn btn--white'>Press Me</a>
