adding a grid test and updating files

--- a/index.html
+++ b/index.html
@@ -23,11 +23,42 @@
 			</div>
 			<div class="header__text-box">
 				<h1 class="heading-primary">
-					<span class="heading-primary--main heading-primary--gradient-text"> Natours </span>
-					<span class="heading-primary--sub"> CSS Review </span>
+					<span class="heading-primary--main heading-primary--gradient-text">Natours</span>
+					<span class="heading-primary--sub">CSS Review</span>
 				</h1>
                 <a href="#" class='btn btn--white'>Press Me</a>
 			</div>
 		</header>
+  <div class="row">
+	  <div class="col-4">4/4</div>
+ </div>
+	  <div class="row">
+		  <div class="col-3">3/4</div>
+		  		<div class="col-1">1/4</div>
+	  </div>
+	  <div class="row">
+		  <div class="col-2">2/4</div>
+		  <div class="col-2">2/4</div>
+	  </div>
+	  <div class="row">
+		  <div class="col-2">2/4</div>		  
+		  <div class="col-1">1/4</div>
+		  <div class="col-1">1/4</div>
+	  </div>
+	<div class="row">
+		<div class="col-1">1/4</div>
+		<div class="col-1">1/4</div>
+		<div class="col-1">1/4</div>
+		<div class="col-1">1/4</div>
+	</div>
+		<div class="row">
+		  <div class="col-1-3">1/3</div>
+		  <div class="col-1-3">1/3</div>
+		  <div class="col-1-3">1/3</div>
+	  	</div>
+		<div class="row">
+		  <div class="col-1-3">1/3</div>
+		  <div class="col-2-3">2/3</div>
+	  	</div>
 	</body>
 </html>
