--- a/index.html
+++ b/index.html
@@ -29,36 +29,33 @@
                 <a href="#" class='btn btn--white'>Press Me</a>
 			</div>
 		</header>
-  <div class="row">
-	  <div class="col-4">4/4</div>
- </div>
-	  <div class="row">
-		  <div class="col-3">3/4</div>
-		  		<div class="col-1">1/4</div>
-	  </div>
-	  <div class="row">
-		  <div class="col-2">2/4</div>
-		  <div class="col-2">2/4</div>
-	  </div>
-	  <div class="row">
-		  <div class="col-2">2/4</div>		  
-		  <div class="col-1">1/4</div>
-		  <div class="col-1">1/4</div>
-	  </div>
 	<div class="row">
-		<div class="col-1">1/4</div>
-		<div class="col-1">1/4</div>
-		<div class="col-1">1/4</div>
-		<div class="col-1">1/4</div>
+		<div class="col-1">100%</div>
 	</div>
-		<div class="row">
-		  <div class="col-1-3">1/3</div>
-		  <div class="col-1-3">1/3</div>
-		  <div class="col-1-3">1/3</div>
-	  	</div>
-		<div class="row">
-		  <div class="col-1-3">1/3</div>
-		  <div class="col-2-3">2/3</div>
-	  	</div>
+	<div class="row">
+		<div class="col-2">50%</div>
+		<div class="col-2">50%</div>
+	</div>
+	<div class="row">
+		<div class="col-3">1/3</div>
+		<div class="col-2of3">2/3</div>
+	</div>
+	<div class="row">
+		<div class="col-3">1/3</div>		  
+		<div class="col-3">1/3</div>
+		<div class="col-3">1/3</div>
+	</div>
+	<div class="row">
+		<div class="col-2">50%</div>
+		<div class="col-4">25%</div>
+		<div class="col-4">25%</div>
+	</div>
+	<div class="row">
+		<div class="col-4">1/4</div>
+		<div class="col-4">1/4</div>
+		<div class="col-4">1/4</div>
+		<div class="col-4">1/4</div>
+	</div>
+	
 	</body>
 </html>
